--- a/style.css
+++ b/style.css
@@ -52,14 +52,14 @@ body{
 
 .img1{
 
-    background-image: url("/img/img1.jpg");
+    background-image: url("img/img1.jpg");
     min-height: 100vh;
 }
 
 
 .img2{
 
-    background-image: url("/img/img2.jpg");
+    background-image: url("img/img2.jpg");
     min-height: 600px;
 
 }
@@ -67,7 +67,7 @@ body{
 
 .img3{
 
-    background-image: url("/img/img3.jpg");
+    background-image: url("img/img3.jpg");
     min-height: 600px;
 
 }
@@ -75,7 +75,7 @@ body{
 
 .img4{
 
-    background-image: url("/img/img4.jpg");
+    background-image: url("img/img4.jpg");
     min-height: 100vh;
 }
 
